# spectacol

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  PrivacyPolicy.txt  README.md  fuse-emulator.qbs  index.html  params.json  spectacol.pro
android/: setup.sh  x86.sh
fuse/: Makefile.am  compat.h  configure.ac  display.h  event.h  fuse-main.c  fuse.c  fuse.h  fuse.qbs  input.h  keyboard.h  libfuse.qbs  loader.h  machine.h  memory.h  mempool.h  menu.c  module.h  movie.h  periph.h  profile.h  psg.h  rectangle.h  rzx.c  rzx.h  screenshot.h  settings-header.pl  settings.pl  slt.h  snapshot.c  snapshot.h  sound.h  spectrum.h  tape.c  tape.h  ui.c  utils.c  utils.h
fuse/debugger/: Makefile.am  breakpoint.c  breakpoint.h  debugger.h
fuse/infrastructure/: Makefile.am
fuse/machines/: Makefile.am
fuse/modules/configure/: configure.qbs
fuse/peripherals/: Makefile.am  dck.c  if1.c
fuse/peripherals/disk/: disciple.h  disk.c  disk.h  fdd.c  fdd.h  opus.h  plusd.h  wd_fdc.c
fuse/peripherals/ide/: divide.c  simpleide.c  zxatasp.c  zxcf.c
fuse/pokefinder/: Makefile.am  pokefinder.h  pokemem.c  pokemem.h
fuse/sound/: Makefile.am  blipbuffer.h
fuse/timer/: timer.c
fuse/ui/: ui.h  uidisplay.h
fuse/ui/fb/: Makefile.am
fuse/ui/gtk/: debugger.c
fuse/ui/null/: Makefile.am  null.c
fuse/ui/qml/: breakpointsmodel.cpp  breakpointsmodel.h  common.pri  compat.cpp  compat.pro  debugger.pro  disassamblemodel.cpp  disassamblemodel.h  folderlistmodel.cpp  folderlistmodel.h  fuse.pro  fuseemulator.cpp  fuseemulator.h  fuselistmodel.cpp  fuselistmodel.h  fuseobject.cpp  fuseobject.h  fuserecording.cpp  fusescreen.cpp  fusescreen.h  fusesettings.cpp  fusesettings.h  fusetape.cpp  fusetape.h  fusetapedata.cpp  fusetapedata.h  fusetexture.cpp  fusetexture.h  joystick.cpp  keysyms.cpp  lib  libspectrum.pro  machines.pro  main.cpp  main.pro  main.qml  peripherals.pro  pokefinder.pro  pokefindermodel.cpp  pokefindermodel.h  (+20 more)
fuse/ui/qml/android/: AndroidManifest.xml
fuse/ui/qml/qml/: AboutPage.qml  BreakpointsView.qml  BrowseTapePage.qml  CalibrateGamepad.qml  ConfigureGamepad.qml  CoverFlow.qml  CoverFlowFiles.qml  CustomizeGamepadPage.qml  DebuggerPage.qml  DisassembleView.qml  FancyBaseList.qml  FancyList.qml  FancyPane.qml  FancyText.qml  FancyTextField.qml  FileBrowserPage.qml  FiltersPage.qml  FuseMenu.qml  GetFileBrowserPage.qml  GetListPage.qml  Joysticks.qml  MachineTypePage.qml  MenuView.qml  MessagePage.qml  OnScreen48Keyboard.qml  OnScreenButton.qml  OnScreenCursorJoystick.qml  OnScreenJoystick.qml  OnScreenJoystickButton.qml  OptionsGeneralPage.qml  OptionsPeripheralsPage.qml  OptionsScreenPage.qml  OptionsSoundPage.qml  PokeFinderPage.qml  PokeManagerPage.qml  RegistersView.qml  SaveFilePage.qml  SaveSnapshotPage.qml  SearchOnlinePage.qml  StandardGamepad.qml  (+3 more)
fuse/ui/qml/qml/private/: TextSizes.qml
fuse/ui/qml/ui/: fuse.font
fuse/ui/scaler/: Makefile.am  scaler.h
fuse/ui/widget/: Makefile.am  debugger.c  error.c  filesel.c  pokemem.c  widget.c  widget.h
fuse/ui/win32/: debugger.c
fuse/unittests/: Makefile.am
fuse/z80/: Makefile.am  z80_ops.c
libspectrum/: accessor.pl  bzip2.c  configure.ac  crypto.c  csw.c  dck.c  ide.c  internals.h  libspectrum.c  libspectrum.h.in  libspectrum.qbs  make-perl.c  memory.c  microdrive.c  plusd.c  pzx_read.c  rzx.c  sna.c  snapshot.c  snp.c  sp.c  szx.c  tap.c  tape.c  tape_accessors.pl  tape_block.c  tape_block.h  tape_set.pl  tzx_read.c  tzx_write.c  warajevo_read.c  wav.c  z80.c  z80em.c  zip.c  zip.h  zlib.c  zxs.c
libspectrum/modules/configure/: configure.qbs
libspectrum/myglib/: ghash.c  gslist.c
libspectrum/test/: edges.c  test.c
spectacol/: CMakeLists.txt  breakpointsmodel.cpp  breakpointsmodel.h  compat.cpp  disassamblemodel.cpp  disassamblemodel.h  folderlistmodel.cpp  folderlistmodel.h  fuseemulator.cpp  fuseemulator.h  fuselistmodel.cpp  fuselistmodel.h  fuseobject.cpp  fuseobject.h  fuserecording.cpp  fuserecording.h  fusescreen.cpp  fusescreen.h  fusesettings.cpp  fusesettings.h  fusetape.cpp  fusetape.h  fusetapedata.cpp  fusetapedata.h  fusetexture.cpp  fusetexture.h  keysyms.cpp  lib  main.cpp  pokefindermodel.cpp  pokefindermodel.h  pokemodel.cpp  pokemodel.h  qml.qrc  qmlui.cpp  qmlui.h  rom  spectacol.pro  spectrumscreen.cpp  spectrumscreen.h  (+10 more)
spectacol/android/: AndroidManifest.xml
spectacol/qml/: AboutPage.qml  BreakpointsView.qml  BrowseTapePage.qml  CalibrateGamepad.qml  CoverFlow.qml  CoverFlowFiles.qml  CustomizeGamepadPage.qml  DebuggerPage.qml  DisassembleView.qml  FancyBaseList.qml  FancyList.qml  FancyPane.qml  FancyText.qml  FancyTextField.qml  FileBrowserPage.qml  FiltersPage.qml  FuseMenu.qml  GetFileBrowserPage.qml  GetListPage.qml  Joysticks.qml  MachineTypePage.qml  Main.qml  MenuView.qml  MessagePage.qml  OnScreen48Keyboard.qml  OnScreenButton.qml  OnScreenCursorJoystick.qml  OnScreenJoystick.qml  OnScreenJoystickButton.qml  OptionsGeneralPage.qml  OptionsPeripheralsPage.qml  OptionsScreenPage.qml  OptionsSoundPage.qml  PokeFinderPage.qml  PokeManagerPage.qml  RegistersView.qml  SaveFilePage.qml  SaveSnapshotPage.qml  SaveTapePage.qml  SearchOnlinePage.qml  (+4 more)
spectacol/qml/private/: TextSizes.qml  qmldir
spectacol/shaders/: mirror.frag  mirror.vert  simple.frag  simple.vert  slang_parser.py
website/: fuse.php  libspectrum.php
